--- a/AboutDialog.ui
+++ b/AboutDialog.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>579</width>
-    <height>475</height>
+    <height>456</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>579</width>
-    <height>475</height>
+    <height>456</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>579</width>
-    <height>475</height>
+    <height>456</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -89,7 +89,7 @@
          <item>
           <widget class="QLabel" name="m_version">
            <property name="text">
-            <string>version 1.0.0</string>
+            <string>version</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -99,7 +99,7 @@
          <item>
           <widget class="QLabel" name="m_copy">
            <property name="text">
-            <string>Copyright (c) 2024 Félix de las Pozas Álvarez</string>
+            <string>Copyright (c)</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -245,7 +245,7 @@ QGroupBox::title {
             <item>
              <widget class="QLabel" name="m_qtVersion">
               <property name="text">
-               <string>version 5.9</string>
+               <string>version</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -326,7 +326,7 @@ QGroupBox::title {
             <item>
              <widget class="QLabel" name="m_curlVersion">
               <property name="text">
-               <string>version 8.8.0</string>
+               <string>version</string>
               </property>
               <property name="alignment">
                <set>Qt::AlignmentFlag::AlignCenter</set>
